@@ -1,5 +1,6 @@
 1.2.4
   -Delete button in messages
+  -Delete button in chat
 
 1.2.3
   -CSS overhaul
